Added ArtistsInTopTenWithTopTenTracksByCountryBenchmark